--- a/src/app.scss
+++ b/src/app.scss
@@ -3,7 +3,7 @@
   font-size: 3em;
   text-shadow: #f8f8f8 0px 0px 3px;
   -webkit-text-fill-color:  transparent;
-  -webkit-text-stroke-color:#fff;
+  -webkit-text-stroke-color:yellow;
   -webkit-text-stroke-width:1px;
   transition: all ease-in-out 0.3s;
   &:hover{
